<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/ic_expense"
        android:title="@string/title_expenses" />

    <item
        android:id="@+id/navigation_income"
        android:icon="@drawable/ic_income"
        android:title="@string/title_income" />

    <item
        android:id="@+id/navigation_budget"
        android:icon="@drawable/ic_budget"
        android:title="@string/title_budget" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_reports"
        android:title="@string/title_reports" />

    <!-- Удаляем или комментируем этот пункт -->
    <!--
     <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/ic_flag"
        android:title="@string/title_goals" />
     -->

</menu>