<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="20dp"
    android:paddingBottom="10dp">

    <!-- Тип категории -->
    <TextView
        android:id="@+id/tv_category_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/category_type"
        android:textAppearance="?attr/textAppearanceLabelMedium" />

    <RadioGroup
        android:id="@+id/rg_category_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_expense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/expense" /> <!-- Расход по умолчанию -->
        <RadioButton
            android:id="@+id/rb_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income" />
    </RadioGroup>

    <!-- Название категории -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TODO: Добавить выбор иконки (например, RecyclerView с иконками) -->
    <!-- <TextView ... label .../> -->
    <!-- <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_icon_picker" ... /> -->

    <!-- TODO: Добавить выбор цвета (например, RecyclerView с цветными кружками) -->
    <!-- <TextView ... label .../> -->
    <!-- <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_color_picker" ... /> -->


</LinearLayout>