<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.budget.BudgetSetupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_budget_period"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/budget_period"
            app:endIconContentDescription="@string/select_budget_period"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_budget_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                tools:text="Июнь 2024" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Заголовок списка лимитов -->
        <TextView
            android:id="@+id/tv_limits_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/category_limits"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_budget_period" />


        <!-- Список категорий для установки лимитов -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category_limits"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btn_save_budget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_limits_label"
            tools:itemCount="5"
            tools:listitem="@layout/item_budget_category_limit" />

        <!-- Текст, если нет категорий расходов -->
        <TextView
            android:id="@+id/tv_no_categories_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_expense_categories_for_budget"
            android:textAppearance="?attr/textAppearanceBody1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/rv_category_limits"
            app:layout_constraintEnd_toEndOf="@id/rv_category_limits"
            app:layout_constraintStart_toStartOf="@id/rv_category_limits"
            app:layout_constraintTop_toTopOf="@id/rv_category_limits"
            app:layout_constraintVertical_bias="0.4"
            tools:visibility="visible" />

        <!-- ProgressBar загрузки -->
        <ProgressBar
            android:id="@+id/progress_bar_budget_setup"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/rv_category_limits"
            app:layout_constraintEnd_toEndOf="@id/rv_category_limits"
            app:layout_constraintStart_toStartOf="@id/rv_category_limits"
            app:layout_constraintTop_toTopOf="@id/rv_category_limits"
            app:layout_constraintVertical_bias="0.4"
            tools:visibility="visible" />

        <!-- Кнопка Сохранить -->
        <Button
            android:id="@+id/btn_save_budget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_budget"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>